fixes issue with the social icons on small-screen device.

--- a/source/hybridpages/assets/stylesheets/elements/_home.scss
+++ b/source/hybridpages/assets/stylesheets/elements/_home.scss
@@ -298,9 +298,7 @@
   @include small-screen {
 
     .splitter {
-
-      display: block;
-      margin-bottom: 5px;
+      margin-bottom: 25px;
     }
 
     #twitter-widget-1{
